[tool.poetry]
name = "test-cc"
version = "0.1.0"
description = ""
authors = ["ReyEduardo836 <reyeduardohalsallquintero8@gmail.com>"]
readme = "README.md"
packages = [{include = "test_cc"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
